--- a/WebContent/pages/publico/index.xhtml
+++ b/WebContent/pages/publico/index.xhtml
@@ -9,5 +9,7 @@
 	        <ui:define name="corpo">
 	            Selecione sua opção
 	        </ui:define>
+			<a href="teste"></a>
+			</br>
 	    </ui:decorate>
 	</html>
