alteracao de testes

--- a/WebContent/pages/publico/index.xhtml
+++ b/WebContent/pages/publico/index.xhtml
@@ -10,6 +10,7 @@
 	            Selecione sua opção
 	        </ui:define>
 			<a href="teste"></a>
+			<p>tetse</p>
 			</br>
 	    </ui:decorate>
 	</html>
