--- a/WebContent/pages/publico/menuh.xhtml
+++ b/WebContent/pages/publico/menuh.xhtml
@@ -7,7 +7,7 @@
 	xmlns:p="http://primefaces.org/ui">
 <ui:composition>
 	<p:menubar autoDisplay="true">
-		<p:menuitem value="Clientes" url="../restrito/cadastraCliente.jsf" />
+		<p:menuitem value="Clientes altera" url="../restrito/cadastraCliente.jsf" />
 		<p:menuitem value="Pedidos" url="../restrito/pedidos.jsf" />
 		<p:submenu label="Tabelas">
 			<p:menuitem value="Fornecedores" url="../restrito/fornecedor.jsf" />
